applications/openlookeng-summary/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: openlookeng-summary
  name: openlookeng-summary
