applications/openlookeng-summary/openlookeng-summary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openlookeng-summary-deployment
  namespace: openlookeng-summary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openlookeng-summary
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: openlookeng-summary
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openlookeng/summary:v1.0.20221230113309
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 5
        name: openlookeng-summary
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 1000m
            memory: 100Mi
          requests:
            cpu: 500m
            memory: 500Mi
