applications/openlookeng-summary/openlookeng-summary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openlookeng-summary-service
  namespace: openlookeng-summary
spec:
  ports:
  - name: http-port
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: openlookeng-summary
  type: ClusterIP
