applications/openlookeng-summary/openlookeng-summary-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-snippet: |
      rewrite ^/zh/2022/agreement_ch.html$  /agreement_ch.html redirect;
      rewrite ^/zh/agreement_ch.html$       /agreement_ch.html redirect;
      rewrite ^/en                          https://summary-en.openlookeng.io/en/2022/ redirect;
  name: openlookeng-summary-ingress
  namespace: openlookeng-summary
spec:
  rules:
  - host: summary.openlookeng.io
    http:
      paths:
      - backend:
          serviceName: openlookeng-oauth2-proxy
          servicePort: 4180
        path: /
  tls:
  - hosts:
    - summary.openlookeng.io
    secretName: openlookeng-summary-tls

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-snippet: |
      rewrite ^/$                          /en/2022/ redirect;
      rewrite ^/en/2022/agreement_en.html$ /agreement_en.html redirect;
      rewrite ^/en/agreement_en.html$      /agreement_en.html redirect;
      rewrite ^/zh                         https://summary.mindspore.cn/zh/2022/ redirect;
  name: openlookeng-summary-en-ingress
  namespace: openlookeng-summary
spec:
  rules:
  - host: summary-en.openlookeng.io
    http:
      paths:
      - backend:
          serviceName: openlookeng-en-oauth2-proxy
          servicePort: 4180
        path: /
  tls:
  - hosts:
    - summary-en.openlookeng.io
    secretName: openlookeng-summary-en-tls
